<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="xyz.aldosari.factotum.MainActivity"
    tools:showIn="@layout/activity_main"
    android:baselineAligned="false"
    android:orientation="vertical">
    <!--android:background="#ecf0f1">-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/textView"
        android:textSize="26sp"
        android:hint="@string/welcome"
        android:layout_weight="1" />

    <GridLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="24dp">

        <ImageButton
            android:layout_column="0"
            android:src="@drawable/mechanical"
            android:contentDescription="@string/mechanical"
            android:background="#00000000"
            android:onClick="openTicket"
            android:layout_row="0"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:scaleX="2"
            android:scaleY="2" />

        <ImageButton
            android:src="@drawable/plumbing"
            android:contentDescription="@string/plumbing"
            android:background="#00000000"
            android:layout_column="0"
            android:onClick="openTicket"
            android:layout_row="2"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:scaleX="2"
            android:scaleY="2" />

        <ImageButton
            android:src="@drawable/electrical"
            android:contentDescription="@string/electrical"

            android:background="#00000000"
            android:layout_column="0"
            android:onClick="openTicket"
            android:layout_row="1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:scaleX="2"
            android:scaleY="2" />

        <TextView
            android:text="@string/electrical"
            android:layout_row="1"
            android:layout_column="1"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openTicket" />

        <TextView
            android:text="@string/plumbing"
            android:layout_row="2"
            android:layout_column="1"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openTicket" />

        <TextView
            android:text="@string/air_conditioning"
            android:layout_column="1"
            android:layout_row="0"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openTicket" />
    </GridLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_tracker"
        android:onClick="checkTicket"
        android:background="@color/colorPrimaryDark"


        android:textColor="#fff"
        android:textAllCaps="false" />

</LinearLayout>
